# webserver-chatroom

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package-lock.json  package.json  restart.bat  restart.sh
.cursor/rules/: project.mdc
docs/: FEATURES.md
include/: chat_room.hpp  request.hpp  response.hpp  server.hpp  websocket.hpp
public/: chat.html  profile.html
public/css/: chat.css  common.css  profile.css
public/js/: chat.js  profile.js
public/uploads/voices/: 1745926978516-323.webm  1745928242052-372.webm  1745928276162-579.webm  1745928302019-953.webm
server/: server.js
src/: chat_room.cpp  main.cpp  request.cpp  response.cpp  server.cpp  websocket.cpp  websocket_server.cpp
